--- a/public/css/operacional/home.css
+++ b/public/css/operacional/home.css
@@ -5,8 +5,15 @@ body{
     margin: 0;
     padding: 0;
 }
+
+hr{
+    height: 2px;
+    background-color: #000;
+}
 .container{
     margin: auto;
+    margin: 0;
+    padding: 0;
 }
 
 .icon{
@@ -46,7 +53,7 @@ body{
 
 .page-title{
     position: block;
-    background: rgba(11, 20, 19, 0.93);
+    background:rgba(86, 30, 26, 1);
     width: 100%;
     color: white;
     text-align: center;
@@ -89,4 +96,80 @@ fieldset:not(:first-of-type){
     margin-top: 3%;
     margin-bottom: 2%;
     width: 8%;
+}
+
+/* Novo checklist */
+
+.selecaoFrota{
+    width: 100%;
+    font-size:60px;
+    text-align: center;
+    padding-top:2%;
+}
+
+#labelFrota{
+    margin-top: 10px;
+}
+
+#frota{
+    width: 70%;
+    height: 5%;
+    font-size:35px;
+}
+
+.horimetros{
+    width:90%;
+    text-align: center;
+}
+
+.row-horimetro{
+    padding-top: 2%;
+    padding-bottom: 3%;
+    height: 5%;
+    font-size: 40px;
+}
+.row-horimetro label{
+    float: left;
+    width: 60%;
+}
+
+.row-horimetro input{
+    float: right;
+    width:40%;
+    font-size: 40px;
+    border: 1px solid #000;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.final{
+    padding-bottom: 0 !important;
+}
+
+.questions{
+    width: 100%;
+}
+
+.questions table{
+    width: 100%;
+    font-size: 40px;
+}
+
+#tableTitle{
+    text-align: center;
+    font-size: 50px;
+
+}
+
+.questions table tr{
+    font-size:60px;
+    word-wrap: wrap;
+    border-bottom: 2px solid #000 !important;
+
+}
+
+.respostas{
+    height: 8%;
+    font-size: 40px;
+    margin-bottom: 10px;
 }
