--- a/public/css/operacional/home.css
+++ b/public/css/operacional/home.css
@@ -4,6 +4,7 @@
 body{
     margin: 0;
     padding: 0;
+    width: 100% !important;
 }
 
 hr{
@@ -14,6 +15,7 @@ hr{
     margin: auto;
     margin: 0;
     padding: 0;
+    width: 100% !important;
 }
 
 .icon{
@@ -156,20 +158,50 @@ fieldset:not(:first-of-type){
 }
 
 #tableTitle{
-    text-align: center;
-    font-size: 50px;
-
+    font-size: 45px;
+    text-align: center !important;
 }
 
 .questions table tr{
     font-size:60px;
     word-wrap: wrap;
-    border-bottom: 2px solid #000 !important;
-
+    min-height: 8%;
 }
 
 .respostas{
+    width: 100%;
     height: 8%;
-    font-size: 40px;
-    margin-bottom: 10px;
+    font-size: 30px;
+    margin-top: 15px !important;
+}
+
+.condicao{
+    width: 100%;
+    font-size: 50px;
+    text-align: center;
+}
+
+.parecer{
+    font-size: 30px !important;
+}
+
+.salvar{
+    width: 40%;
+    height: 6%;
+    font-size: 40px !important;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: 30%;
+}
+
+.observacao{
+    width: 100%;
+}
+
+.obTextArea{
+    width: 80%;
+    margin-left: 10%;
+    font-size: 32px;
+    height: 8%;
+    border: 1px solid #000;
 }
