--- a/public/css/operacional/meusChecklists.css
+++ b/public/css/operacional/meusChecklists.css
@@ -32,6 +32,7 @@
     
     .tabela-checklists{
         font-size: 40px;
+        margin-top: 30px !important; 
     }
     
     #formExibir{
@@ -47,4 +48,9 @@
         width:100%;
         height: 80px;
         font-size: 40px !important;
+    }
+
+    .alert{
+        font-size: 50px;
+        word-wrap: wrap;
     }
