--- a/public/css/operacional/exibirChecklist.css
+++ b/public/css/operacional/exibirChecklist.css
@@ -6,13 +6,17 @@ table{
 .col{
     width: 50% !important;
 }
+
+.tabelas{
+    margin-top: 30px;
+    border: 1px solid #000;
+}
 .perguntas{
     text-align: right;
     width: 100%;
     font-size: 40px !important;
     margin: 0 !important;
     padding: 0 !important;
-    margin-top: 16px !important;
     margin-left: 15px !important;
 }
 
