--- a/public/css/usuarios/adicionarUsuario.css
+++ b/public/css/usuarios/adicionarUsuario.css
@@ -1,22 +1,38 @@
 .container{
-    width: 80%;
-    margin: auto;
-    text-align: center;
+    width: 100%;
+    margin: 0 !important;
+    padding: 0 !important;
+    margin: auto !important;
+    text-align: center !important;
 }
 
 form{
+    width: 90%;
+    text-align: center !important;
     margin: 0;
     padding: 0;
 }
 
 form input{
-    width:60%;
+    width:40%;
     margin-bottom: 2%;
 }
 
 form label{
-    text-align: left;
+    text-align: right !important;
+    width: 15%;
     margin-bottom: 2%;
+    margin-right: 20px !important;
+}
+
+.salvar{
+    margin: auto !important;
+    margin-left: 200px !important;
+    width: 25%;
+}
+
+.selects{
+     margin-left: 130px;
 }
 
 
