--- a/public/css/equipamentos/alterarEquipamentos.css
+++ b/public/css/equipamentos/alterarEquipamentos.css
@@ -11,6 +11,10 @@
     margin: auto;
 }
 
+table th{
+    width: 28% !important;
+}
+
 form{
     margin: 0;
     padding: 0;
@@ -20,4 +24,19 @@ form{
     width:42%;
     float: right;
     margin-left: 8%;
+}
+
+.corrigir{
+    width: 92% !important;
+}
+
+#busca{
+    width:430px;
+    height: 35px;
+}
+
+#searchIcon{
+    margin-left:10px;
+    width:50px;
+    height:50px;
 }
