--- a/public/css/exibirChecklist.css
+++ b/public/css/exibirChecklist.css
@@ -3,7 +3,13 @@
     width:80%;
     text-align:center;
 }
+table{
+    text-align: center !important;
+}
 
+table th{
+    text-align: center !important;
+}
 .tabela{
      margin:auto;
      width:80%;
