--- a/public/css/usuarios/adicionarUsuario.css
+++ b/public/css/usuarios/adicionarUsuario.css
@@ -14,7 +14,7 @@ form{
 }
 
 form input{
-    width:40%;
+    width:46%;
     margin-bottom: 2%;
 }
 
@@ -28,11 +28,20 @@ form label{
 .salvar{
     margin: auto !important;
     margin-left: 200px !important;
-    width: 25%;
+    width: 18%;
 }
 
 .selects{
-     margin-left: 130px;
+     margin-left: 100px !important;
 }
 
+.opcoes{
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 10%;
+}
+
+#equipamentoSelect{
+    display: none;
+}
 
